Added SwiftOCA to Repositories page.

--- a/repositories.html
+++ b/repositories.html
@@ -184,71 +184,99 @@
 				prior to downloading and using the Microdemo.
 			</p>
 				
-		<h2 class='headSep'>AES70.js JavaScript library</h2>
-		<table>
-			<col width='20%' />
-			<col width='80%' />
-			<tbody>
-				<tr>
-					<td class='tdTightTop'> Repository: </td>
-					<td class='tdTightTop'>
-						<a rel=noopener target=_blank href='https://github.com/DeutscheSoft/AES70.js'>
-							https://github.com/DeutscheSoft/AES70.js
-						</a>
-					</td>
-				</tr>
-				<tr>
-					<td class='tdTightTop'>Owner:</td>
-					<td class='tdTightTop'>
-						<a href='https://deuso.de/'> 
-							 DeusO (DeutschSoft GmbH) 
-						</a>
-					</td>
-				</tr>
-			<tbody>
-		</table>
-			
-		<p>
-			AES70.js is a javascript library that implements AES70.  
-			Based on Node.js, it can be used for building OCA device controllers that run in browser environments. 
-		</p>
+			<h2 class='headSep'>AES70.js JavaScript library</h2>
+			<table>
+				<col width='20%' />
+				<col width='80%' />
+				<tbody>
+					<tr>
+						<td class='tdTightTop'> Repository: </td>
+						<td class='tdTightTop'>
+							<a rel=noopener target=_blank href='https://github.com/DeutscheSoft/AES70.js'>
+								https://github.com/DeutscheSoft/AES70.js
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class='tdTightTop'>Owner:</td>
+						<td class='tdTightTop'>
+							<a href='https://deuso.de/'> 
+								 DeusO (DeutschSoft GmbH) 
+							</a>
+						</td>
+					</tr>
+				<tbody>
+			</table>
+				
+			<p>
+				AES70.js is a javascript library that implements AES70.  
+				Based on Node.js, it can be used for building OCA device controllers that run in browser environments. 
+			</p>
 		
-		<p>
-			AES70.js is an open-source component developed by OCA Alliance member DeusO. It is available on GItHUb at
-			(<a rel=noopener target=_blank href='https://github.com/DeutscheSoft/AES70.js'>https://github.com/DeutscheSoft/AES70.js</a>)
-			and as an NPM package at
-			(<a rel=noopener target=_blank href='https://www.npmjs.com/package/aes70'>https://www.npmjs.com/package/aes70</a>).
-		</p>
+			<p>
+				AES70.js is an open-source component developed by OCA Alliance member DeusO. It is available on GItHUb at
+				(<a rel=noopener target=_blank href='https://github.com/DeutscheSoft/AES70.js'>https://github.com/DeutscheSoft/AES70.js</a>)
+				and as an NPM package at
+				(<a rel=noopener target=_blank href='https://www.npmjs.com/package/aes70'>https://www.npmjs.com/package/aes70</a>).
+			</p>
 
-		<h2 class='headSep'>AES70 OCP.1 Binary String Generator</h2>
-		<table>
-			<col width='20%'>
-			<col width='80%'>
-			<tbody>
-				<tr>
-					<td class='tdTightTop'> Repository: </td>
-					<td class='tdTightTop'>
-						<a rel=noopener target=_blank href='https://github.com/escalonely/AES70_OCP1_StringGenerator'>
-							https://github.com/escalonely/AES70_OCP1_StringGenerator
-						</a>
-						</a>
-					</td>
-				</tr>
-				<tr>
-					<td class='tdTightTop'>Owner:</td>
-					<td class='tdTightTop'>
-						Bernardo Escalona Espinosa
-					</td>
-				</tr>
-			</tbody>
-		</table>
+			<h2 class='headSep'>AES70 OCP.1 Binary String Generator</h2>
+			<table>
+				<col width='20%'>
+				<col width='80%'>
+				<tbody>
+					<tr>
+						<td class='tdTightTop'> Repository: </td>
+						<td class='tdTightTop'>
+							<a rel=noopener target=_blank href='https://github.com/escalonely/AES70_OCP1_StringGenerator'>
+								https://github.com/escalonely/AES70_OCP1_StringGenerator
+							</a>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class='tdTightTop'>Owner:</td>
+						<td class='tdTightTop'>
+							Bernardo Escalona Espinosa
+						</td>
+					</tr>
+				</tbody>
+			</table>
 
-		<p>
-			The AES70 OCP.1 Binary String Generator is a small tool that can generate AES70/OCA protocol data units (PDUs) for TCP-network-based control (OCP.1). The PDUs are generated quickly and on the fly as plain text in hexadecimal notation after adjusting only a handful of parameters. The resulting PDUs can be used by integrators, e.g. by copy-pasting them into a script, for controlling and monitoring AES70-capable devices over TCP/IP. 
-		</p>
-		<p>
-			The AES70 OCP.1 Binary String Generator is a privately created and driven project.
-		</p>
+			<p>
+				The AES70 OCP.1 Binary String Generator is a small tool that can generate AES70/OCA protocol data units (PDUs) for TCP-network-based control (OCP.1). The PDUs are generated quickly and on the fly as plain text in hexadecimal notation after adjusting only a handful of parameters. The resulting PDUs can be used by integrators, e.g. by copy-pasting them into a script, for controlling and monitoring AES70-capable devices over TCP/IP. 
+			</p>
+			<p>
+				The AES70 OCP.1 Binary String Generator is a privately created and driven project.
+			</p>
+			
+			
+			<h2 class='headSep'>SwiftOCA - Implementation of AES70/OCA in Swift</h2>
+			<table>
+				<col width='20%'>
+				<col width='80%'>
+				<tbody>
+					<tr>
+						<td class='tdTightTop'> Repository: </td>
+						<td class='tdTightTop'>
+							<a rel=noopener target=_blank href='https://github.com/PADL/SwiftOCA'>
+								https://github.com/PADL/SwiftOCA
+							</a>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class='tdTightTop'>Owner:</td>
+						<td class='tdTightTop'>
+							Luke Howard
+						</td>
+					</tr>
+				</tbody>
+			</table>
+
+			<p>
+				SwiftOCA is a pure Swift implementation of the AES70/OCA control protocol, principally used for remote control of professional audio devices. It can be used to build both controllers and devices.	
+			</p>
 		</div>
   </body>
 </html>
