Added developer note to Repositories page.

--- a/repositories.html
+++ b/repositories.html
@@ -63,6 +63,21 @@
 				<a target=_blank href='downloads.html'><b>Downloads page</b></a> 
 				for listings of free OCA-related materials that are not in repositories.
 			</p>
+			
+			<h3> Notes to developers of AES70-related repositories </h3>
+			<p>
+				To help the AES70 community discover your work,
+				we suggest you attach the topic <b>'aes70'</b> to your repository.
+				To do that, open the repository details editor by clicking the gearwheel 
+				at the upper right of the <b>About</b> section in the	repository's GitHub main page.
+			</p>
+			<p>
+				Please consider registering your repository in this listing!  
+				To do that, please send an email message to 
+				<a href='mailto:info@ocaalliance.com'>info@ocaalliance.com</a>
+				with the repository's name, description, URL, and owner contact details.
+				We'll get back to you if we have any questions.
+			</p>			
 		
 			<h2 class='headSep'>OcaToolsAndDemos</h2>
 			<table>
